--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -118,17 +118,17 @@
     column-count: 1;
     column-gap: 1rem;
   }
-  @media (min-width: 768px) {
+  @container (min-width: 500px) {
     .masonry-grid {
       column-count: 2;
     }
   }
-  @media (min-width: 1024px) {
+  @container (min-width: 800px) {
     .masonry-grid {
       column-count: 3;
     }
   }
-  @media (min-width: 1280px) {
+  @container (min-width: 1200px) {
     .masonry-grid {
         column-count: 4;
     }
