--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -97,19 +97,19 @@
 
 @layer components {
   .rdp-day {
-    @apply h-20 w-20 rounded-lg transition-transform duration-300 ease-in-out;
+    @apply h-14 w-14 rounded-lg backdrop-blur-sm border border-black/5 bg-white/10 transition-all duration-300 ease-in-out;
   }
   .rdp-day:hover {
-    @apply z-10 scale-105;
+    @apply z-10 scale-110 -translate-y-1 shadow-lg bg-white/30;
   }
   .rdp-day_green {
-    @apply border border-status-green bg-status-green/10 shadow-sm;
+    @apply bg-status-green/20 border-status-green/30;
   }
   .rdp-day_yellow {
-    @apply border border-status-yellow bg-status-yellow/10 shadow-sm;
+    @apply bg-status-yellow/20 border-status-yellow/30;
   }
   .rdp-day_red {
-    @apply border border-status-red bg-status-red/10 shadow-sm;
+    @apply bg-status-red/20 border-status-red/30;
   }
   .animated-image {
       @apply transition-transform duration-300 ease-in-out hover:scale-105;
