--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -123,7 +123,7 @@
 
 @layer components {
   .rdp-day {
-    @apply h-12 w-12 rounded-lg backdrop-blur-sm border border-black/5 bg-white/10 transition-all duration-300 ease-in-out;
+    @apply h-9 w-9 sm:h-12 sm:w-12 rounded-lg backdrop-blur-sm border border-black/5 bg-white/10 transition-all duration-300 ease-in-out;
   }
   .rdp-day:hover {
     @apply z-10 scale-110 -translate-y-1 shadow-lg bg-white/30;
