--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -141,13 +141,22 @@
             opacity: 1;
         }
         100% {
-            transform: scale(15);
+            transform: scale(30);
             opacity: 0;
         }
     }
     .animate-zoom-in-out {
-        animation: zoom-in-out 1.5s ease-in forwards;
+        animation: zoom-in-out 1.2s ease-in forwards;
         animation-delay: 0.5s;
+    }
+    @keyframes fade-out {
+        to {
+            opacity: 0;
+        }
+    }
+    .animate-fade-out {
+        animation: fade-out 0.5s ease-in forwards;
+        animation-delay: 1.5s;
     }
 
 }
